--- a/site/web/app/languages/admin-ru_RU.po
+++ b/site/web/app/languages/admin-ru_RU.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 4.9.x - Development - Administration package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2018-02-22 17:48:06+0000\n"
+"PO-Revision-Date: 2018-03-19 13:10:09+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -142,7 +142,7 @@ msgstr "https://codex.wordpress.org/%D0%A0%D0%B0%D0%B7%D0%BC%D0%B5%D1%89%D0%B0%D
 #. translators: %s: Codex URL
 #: wp-admin/options-general.php:85
 msgid "Enter the address here if you <a href=\"%s\">want your site home page to be different from your WordPress installation directory</a>."
-msgstr "Если вы хотите, чтобы адрес сайта <a href=\"%s\">отличался от директории установки WordPress</a>, введите адрес здесь"
+msgstr "Если вы хотите, чтобы адрес сайта <a href=\"%s\">отличался от директории установки WordPress</a>, введите адрес здесь."
 
 #: wp-admin/about.php:263
 msgid "https://wordpress.org/plugins/gutenberg/"
